[package]
name = "sns-cross-post-tool"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
curl = "0.4.46"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
url = "2.5.0"
regex = "1.10.4"
scraper = "0.22.0"
log = "0.4.22"
env_logger = "0.11.5"
