[package]
name = "sns-cross-post-tool"
version = "0.8.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
curl = "0.4.47"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
regex = "1.11.1"
scraper = "0.23.1"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.37", features = ["derive"] }
